--- a/app/globals.css
+++ b/app/globals.css
@@ -2581,8 +2581,8 @@ strong {
 /* Floating Action Button */
 .fab {
   position: fixed;
-  bottom: 2rem;
-  right: 2rem;
+  bottom: 190px;
+  right: 30px;
   width: 56px;
   height: 56px;
   border-radius: 50%;
@@ -2599,6 +2599,13 @@ strong {
   align-items: center;
   justify-content: center;
   font-size: 1.25rem;
+}
+
+@media (max-width: 768px) {
+  .fab {
+    bottom: 170px;
+    right: 15px;
+  }
 }
 
 .fab.visible {
